# TASK-req_a5068a313d00

./: metadata.json
.claude/: settings.json  settings.local.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report.md
repo/backend/: Cargo.toml  Dockerfile
repo/backend/config/: mod.rs
repo/backend/data/: zip4_index.csv
repo/backend/logging/: mod.rs
repo/backend/migrations/: 0001_init.sql  0002_retention_prune.sql  0002_security.sql  0003_processing_log.sql  0004_step_progress_updated_at.sql  0005_branch_scope.sql  0005_enforce_branch_for_super_tech.sql  0006_on_call_routing.sql  0006_record_versions.sql
repo/backend/src/: crypto.rs  db.rs  dispatch.rs  enums.rs  errors.rs  etag.rs  geo.rs  lib.rs  main.rs  pagination.rs  processing_log.rs  retention.rs  sla.rs  state_machine.rs  versions.rs
repo/backend/src/admin/: routes.rs
repo/backend/src/analytics/: mod.rs  routes.rs
repo/backend/src/auth/: hashing.rs  jwt.rs  mod.rs  models.rs  routes.rs
repo/backend/src/learning/: mod.rs  routes.rs
repo/backend/src/location/: geocode_stub.rs  mod.rs  routes.rs
repo/backend/src/me/: routes.rs
repo/backend/src/middleware/: mod.rs  rbac.rs  request_log.rs
repo/backend/src/notifications/: mod.rs  routes.rs  stub.rs
repo/backend/src/recipes/: mod.rs  routes.rs
repo/backend/src/sync/: merge.rs  mod.rs  routes.rs
repo/backend/src/work_orders/: mod.rs  models.rs  progress.rs  routes.rs
repo/backend/tests/: api.rs  unit.rs
repo/backend/tests/api/: admin.rs  analytics.rs  audit_log.rs  auth.rs  common.rs  geocoding.rs  learning.rs  location.rs  me.rs  notifications.rs  rbac.rs  recipes.rs  retention.rs  sla.rs  sync.rs  work_orders.rs
repo/backend/tests/unit/: crypto.rs  pagination.rs  rbac_guards.rs  state_machine.rs  sync_conflicts.rs
repo/frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
repo/frontend/src/: api.rs  app.rs  auth.rs  main.rs  offline.rs  routes.rs  types.rs
repo/frontend/src/components/: loading_button.rs  map_svg.rs  mod.rs  nav.rs  sla.rs  state_badge.rs  timer_ring.rs  toast.rs
repo/frontend/src/pages/: admin.rs  analytics.rs  dashboard.rs  login.rs  map_view.rs  mod.rs  notifications.rs  recipe_step.rs  work_order_detail.rs
repo/frontend/styles/: main.css
repo/frontend/tests/e2e/: smoke.sh
repo/frontend/tests/unit/: README.md
(+8 files in other folders)
