[package]
name = "fieldops_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fieldops_backend"
path = "src/main.rs"

[lib]
name = "fieldops_backend"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-service = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
anyhow = "1"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
once_cell = "1"
regex = "1"
csv = "1"

[dev-dependencies]
actix-http = "3"
tokio = { version = "1", features = ["full", "test-util"] }
